# octotiger

./: CMakeLists.txt  circle.yml
circle_ci_scripts/: build-Vc.sh  build-hpx.sh  build-octotiger.sh
octotiger/: config.hpp  defs.hpp  get_locality_id.hpp  node_tree.hpp  node_tree_component.hpp  tree_location.hpp
octotiger/geometry/: constants.hpp  dimension.hpp  direction.hpp  face.hpp  octant.hpp  quadrant.hpp  side.hpp
octotiger/radiation/: implicit.hpp
src/: CMakeLists.txt  channel.hpp  compute_factor.cpp  compute_factor.hpp  compute_ilist.cpp  compute_ilist.hpp  defs.hpp  eos.cpp  eos.hpp  export_definitions.hpp  geometry.hpp  get_locality_id.cpp  grid.cpp  grid.hpp  grid_fmm.cpp  grid_fmm_compute_interactions.cpp  grid_fmm_compute_interactions_boundary.cpp  grid_fmm_compute_interactions_leaf.cpp  grid_fmm_new.hpp  grid_output.cpp  grid_scf.cpp  interaction_types.hpp  main.cpp  node_client.hpp  node_server.cpp  node_server.hpp  node_server_actions_1.cpp  node_server_actions_2.cpp  node_server_actions_3.cpp  node_state.hpp  node_tree.cpp  node_tree_component.cpp  options.cpp  options.hpp  problem.cpp  problem.hpp  profiler.hpp  silo.cpp  simd.hpp  space_vector.hpp  (+4 more)
src/common_kernel/: interaction_constants.hpp  kernel_taylor_set_basis.hpp  multiindex.hpp  struct_of_array_data.hpp
src/cuda/: cuda_helper.h  util.h  util_cuda.h
src/cuda_util/: cuda_helper.hpp  cuda_scheduler.cpp
src/imc_rad/: diffusion.nb  firstpassage.nb  imc_rad.cpp  imc_rad.hpp  worksheet.nb
src/kernels/: calculate_stencil.cpp  calculate_stencil.hpp  compare_interaction_lists.cpp  compare_interaction_lists.hpp  helper.hpp  interaction_constants.hpp  interactions_constants.hpp  interactions_iterators.hpp  m2m_interactions.cpp  m2m_interactions.hpp  m2m_kernel.cpp  m2m_kernel.hpp  m2m_kernel_blocked_interaction.cpp  m2m_kernel_single_interaction.cpp  m2m_parameters.hpp  m2m_simd_types.hpp  m2m_taylor_set_basis.hpp  multiindex.cpp  multiindex.hpp  struct_of_array_data.hpp  struct_of_array_taylor.hpp
src/m2m_kernel/: calculate_stencil.cpp  calculate_stencil.hpp  cuda_helper.hpp  helper.hpp  interaction_constants.hpp  interactions_iterators.hpp  m2m_cuda.cu  m2m_cuda.hpp  m2m_interactions.cpp  m2m_interactions.hpp  m2m_kernel.cpp  m2m_kernel.hpp  m2m_kernel_blocked_interaction.cpp  multiindex.hpp  struct_of_array_data.hpp
src/mesa/: mesa.cpp  mesa.hpp
src/monopole_interactions/: calculate_stencil.cpp  cuda_p2p_interaction_interface.cpp  monopole_interaction_interface.cpp  monopole_interaction_interface.hpp  p2m_interaction_interface.cpp  p2m_interaction_interface.hpp  p2m_kernel.cpp  p2m_kernel.hpp  p2m_kernel_blocked_interaction.cpp  p2p_cuda_kernel.cu  p2p_interaction_interface.cpp  p2p_interaction_interface.hpp  p2p_kernel.cpp  p2p_kernel.hpp  p2p_kernel_blocked_interaction.cpp
src/multipole_interactions/: calculate_stencil.cpp  calculate_stencil.hpp  compute_kernel_templates.hpp  cuda_helper.hpp  cuda_multipole_interaction_interface.cpp  cuda_multipole_interaction_interface.hpp  m2m_cuda.cu  m2m_cuda.hpp  m2m_kernel.cpp  m2m_kernel.hpp  m2m_kernel_blocked_interaction.cpp  m2p_kernel.cpp  m2p_kernel.hpp  m2p_kernel_blocked_interaction.cpp  multipole_cpu_kernel.cpp  multipole_cpu_kernel.hpp  multipole_cuda_kernel.cu  multipole_cuda_kernel.hpp  multipole_interaction_interface.cpp  multipole_interaction_interface.hpp
src/radiation/: implicit.cpp  rad_grid.cpp
test_problems/marshak/: marshak.ini
tests/: CMakeLists.txt  create_tree.cpp
tools/: run-all-scaling-experiments-single-node-tave.sh  scaling-experiment-single-node-tave.sh
unittests/: tests_interactions_kernel.cpp
